--- a/Revamp/assets/css/styles.css
+++ b/Revamp/assets/css/styles.css
@@ -513,8 +513,103 @@ img {
 /*=============== CONTACT ===============*/
 
 /*=============== FOOTER ===============*/
+.footer {
+    background-color: var(--black-color);
+    color: var(--text-color-light);
+    padding-block: 3.5rem 2rem ;
+}
+
+.footer__container {
+    row-gap: 4rem;
+    padding-bottom: 4rem;
+    border-bottom: 1px solid var(--black-border);
+}
+
+.footer__logo {
+    display: inline-flex;
+    align-items: center;
+    column-gap: 0.25rem;
+}
+
+.footer__logo img {
+    max-width: 50%;
+}
+
+.footer__details {
+    margin: 1rem 0;
+    font-size: var(--h3-font-size);
+}
+
+.footer__email,
+.footer__info {
+    font-style: normal;
+}
+
+.footer__content {
+    grid-template-columns: repeat(2, max-content);
+    gap: 4rem 3rem;
+}
+
+.footer__title {
+    font-size: var(--h3-font-size);
+    color: var(--white-color);
+    bottom: 0 0 1rem 0;
+    margin: 0 0 0.5rem 0;
+}
+
+.footer__links,
+.footer__list {
+    display: grid;
+    row-gap: 0.5rem;
+}
+
+.footer__link {
+    color: var(--text-color-light);
+    transition: color 400ms;
+}
+
+.footer__link:hover {
+    color: var(--first-color);
+}
+
+.footer__socials {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 1rem;
+}
+
+.footer__social-link {
+    font-size: 1.75rem;
+    color: var(--second-color);
+    transition: transform 400ms;
+    transition: color 400ms;
+}
+
+
+.footer__social-link:hover {
+    color: var(--white-color);
+    transform: translateY(-0.25rem);
+}
+
+.footer__copy {
+    display: block;
+    text-align: center;
+    font-size: var(--small-font-size);
+    margin: 4rem 0 0 0;
+}
+
+
 
 .footer__title, .footer__link {
+    text-transform: capitalize;
+}
+
+.footer__details {
+    font-weight: var(--font-bold);
+}
+
+.footer__copy {
     text-transform: capitalize;
 }
 
