--- a/Revamp/assets/css/styles.css
+++ b/Revamp/assets/css/styles.css
@@ -298,11 +298,13 @@ img {
 
 .home__img-1 {
     width: 550px;
+    border-radius: 1rem;
     margin: 3.5rem 0 0 0;
 } 
 
 .home__img-2 {
     width: 250px;
+    border-radius: 1rem;
     border: 5px solid var(--black-color);
     position: absolute;
     left: 0;
@@ -511,6 +513,63 @@ img {
 }
 
 /*=============== CONTACT ===============*/
+.contact__container {
+    row-gap: 3rem;
+    padding-block: 1.5rem 3rem;
+}
+
+.contact__img {
+    width: 320px;
+    border-radius: 1rem;
+    justify-self: center;
+}
+
+.contact__form {
+    width: 90%;
+    margin: 0 auto;
+    background-color: var(--white-color);
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
+    padding: 1rem 1.5rem;
+    border-radius: 0.5rem;
+}
+
+
+.contact__form label {
+    font-weight: var(--font-bold);
+    text-transform: capitalize;
+    margin: 0 0 0.5rem 0;
+    display: block;
+}
+
+.contact__form input,
+.contact__form select, 
+.contact__form textarea {
+    width: 100%;
+    padding: 0.75rem;
+    border: 1px solid #ccc;
+    border-radius: 0.5rem;
+    margin: 1rem 0;
+    font-family: var(--body-font);
+}
+
+.contact__form textarea {
+    max-width: 100%;
+    font-size: var(--small-font-size);
+}
+
+.contact__button {
+    max-width: 15rem;
+    margin: 2rem auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: transform 400ms;
+}
+
+.contact__button:hover {
+    transform: translateY(-0.5rem)
+}
 
 /*=============== FOOTER ===============*/
 .footer {
@@ -546,7 +605,8 @@ img {
 }
 
 .footer__content {
-    grid-template-columns: repeat(2, max-content);
+    grid-template-columns: repeat(3, max-content);
+    justify-content: space-around;
     gap: 4rem 3rem;
 }
 
@@ -574,7 +634,6 @@ img {
 
 .footer__socials {
     display: flex;
-    justify-content: center;
     align-items: center;
     column-gap: 1rem;
 }
@@ -599,8 +658,6 @@ img {
     margin: 4rem 0 0 0;
 }
 
-
-
 .footer__title, .footer__link {
     text-transform: capitalize;
 }
@@ -611,6 +668,17 @@ img {
 
 .footer__copy {
     text-transform: capitalize;
+}
+
+@media screen and (max-width: 600px) {
+    .footer__content {
+        grid-template-columns: repeat(1, max-content);
+        justify-content: start;
+    }
+
+    .footer__social-link {
+        justify-content: start;
+    }
 }
 
 /*=============== SCROLL BAR ===============*/
