--- a/Revamp/assets/css/styles.css
+++ b/Revamp/assets/css/styles.css
@@ -181,7 +181,6 @@ img {
         padding: 7.5rem 3.5rem 0;
         border-left: 2px solid var(--black-border);
         transition: right 400ms;
-
     }
 }
 
@@ -233,6 +232,9 @@ img {
 
 
 /* Active link */
+.active-link {
+    color: var(--second-color);
+}
 
 /*=============== HOME ===============*/
 .home {
@@ -475,7 +477,6 @@ img {
     background-color: var(--black-color);
     left: 0;
     bottom: 0;
-
 }
 
 
@@ -512,20 +513,22 @@ img {
     right: calc(50% - 5rem)
 }
 
-/*=============== CONTACT ===============*/
-.contact__container {
+/*=============== QUOTE ===============*/
+.quote__container {
     row-gap: 3rem;
     padding-block: 1.5rem 3rem;
+    display: flex;
+    justify-content: center;
 }
 
-.contact__img {
+.quote__img {
     width: 320px;
     border-radius: 1rem;
     justify-self: center;
 }
 
-.contact__form {
-    width: 90%;
+.quote__form {
+    width: 100%;
     margin: 0 auto;
     background-color: var(--white-color);
     box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
@@ -533,17 +536,16 @@ img {
     border-radius: 0.5rem;
 }
 
-
-.contact__form label {
+.quote__form label {
     font-weight: var(--font-bold);
     text-transform: capitalize;
     margin: 0 0 0.5rem 0;
     display: block;
 }
 
-.contact__form input,
-.contact__form select, 
-.contact__form textarea {
+.quote__form input,
+.quote__form select, 
+.quote__form textarea {
     width: 100%;
     padding: 0.75rem;
     border: 1px solid #ccc;
@@ -552,12 +554,12 @@ img {
     font-family: var(--body-font);
 }
 
-.contact__form textarea {
+.quote__form textarea {
     max-width: 100%;
     font-size: var(--small-font-size);
 }
 
-.contact__button {
+.quote__button {
     max-width: 15rem;
     margin: 2rem auto;
     display: flex;
@@ -565,9 +567,10 @@ img {
     align-items: center;
     cursor: pointer;
     transition: transform 400ms;
+    text-transform: capitalize;
 }
 
-.contact__button:hover {
+.quote__button:hover {
     transform: translateY(-0.5rem)
 }
 
@@ -596,7 +599,7 @@ img {
 
 .footer__details {
     margin: 1rem 0;
-    font-size: var(--h3-font-size);
+    font-size: var(--normal-font-size);
 }
 
 .footer__email,
@@ -605,7 +608,7 @@ img {
 }
 
 .footer__content {
-    grid-template-columns: repeat(3, max-content);
+    grid-template-columns: repeat(2, max-content);
     justify-content: space-around;
     gap: 4rem 3rem;
 }
@@ -640,14 +643,13 @@ img {
 
 .footer__social-link {
     font-size: 1.75rem;
-    color: var(--second-color);
-    transition: transform 400ms;
-    transition: color 400ms;
+    color: var(--first-color);
+    transition: transform 400ms, color 400ms;
 }
 
 
 .footer__social-link:hover {
-    color: var(--white-color);
+    color: var(--second-color);
     transform: translateY(-0.25rem);
 }
 
@@ -670,10 +672,86 @@ img {
     text-transform: capitalize;
 }
 
-@media screen and (max-width: 600px) {
+/*=============== SCROLL BAR ===============*/
+
+::-webkit-scrollbar {
+    width: 0.6rem;
+    background-color: hsl(255, 5%, 75%);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: hsl(255, 5%, 65%);
+}
+
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: hsl(255, 5%, 55%);
+}
+
+
+/*=============== SCROLL UP ===============*/
+.scrollup {
+    position: fixed;
+    right: 1rem;
+    bottom: -50%;
+    background-color: var(--body-color);
+    box-shadow: 0 4px 16px hsla(255, 90%, 8% .15);
+    color: var(--title-color);
+    display: inline-flex;
+    padding: 0.5rem;
+    font-size: 1.25rem;
+    border-radius: 0.5rem;
+    z-index: var(--z-tooltip);
+    transition: bottom 400ms, transform 400ms;
+}
+
+
+.scrollup:hover {
+    transform: translateY(-0.5rem);
+}
+
+/* Show Scroll Up */
+
+.show-scroll {
+    bottom: 3rem;
+}
+
+/*=============== BREAKPOINTS ===============*/
+/* For small devices */
+@media screen and (max-width: 340px) {
+    .container {
+        margin-inline: 1rem;
+    }
+
+    .section__title {
+        font-size: 1.25rem;
+    }
+
+    .home__title {
+        font-size: 1.75rem;
+    }
+
+    .home__buttons {
+        flex-direction: column;
+    }
+
+    .home__img-1 {
+        width: 200px;
+        margin: 1.5rem 0 0 0;
+    }
+
+    .about__list {
+        grid-template-columns: repeat(1, 200px);
+    }
+
+    .about__img-1 {
+        width: 150px;
+        left: 4rem;
+    }
+
     .footer__content {
         grid-template-columns: repeat(1, max-content);
-        justify-content: start;
+        justify-content: space-around;
     }
 
     .footer__social-link {
@@ -681,15 +759,56 @@ img {
     }
 }
 
-/*=============== SCROLL BAR ===============*/
-
-/*=============== SCROLL UP ===============*/
-
-/* Show Scroll Up */
-
-/*=============== BREAKPOINTS ===============*/
-/* For small devices */
-
 /* For medium devices */
 
+@media screen and (min-width: 540px) {
+    .home__container,
+    .about__container,
+    .service__container {
+        grid-template-columns: 360px;
+        justify-content: center;
+    }
+
+    .footer__content {
+        grid-template-columns: repeat(3, max-content);
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .nav__menu {
+        width: 50%;
+    }
+
+    .contact__form {
+        min-width: 100%;
+    }
+
+    .contact__data {
+        grid-template-columns: repeat(2, 240px);
+    }
+
+    .footer__container {
+        grid-template-columns: repeat(2, max-content);
+        justify-content: space-between;
+    }
+}
 /* For large devices */
+
+@media screen and (min-width: 1150px) {
+    .container {
+        margin-inline: auto;
+    }
+
+    .section {
+        padding-block: 7rem 2rem;
+    }
+
+    .nav {
+        height: calc(var(--header-height) + 2rem);
+    }
+
+    .nav__toggle,
+    .nav__close {
+        display: none;
+    }
+}
